recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:23: error: not enough arguments for method snowFlake: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
        snowFlake(levels)
                 ^Koch:25: error: not enough arguments for method snowFlake: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
        snowFlake(levels)
                 ^Koch:27: error: not enough arguments for method snowFlake: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
        snowFlake(levels)
                 ^